<resources>
  <string name="app_name">Ofiport</string>
  <string name="landing_greeting">Salam</string>
  <string name="landing_balance_title">Saldo Tersedia</string>
  <string name="landing_settings">Settings</string>
  <string name="landing_action_title">Aksi Cepat</string>
  <string name="landing_overview_report">Income</string>
  <string name="landing_create_transaction">Buat Transaksi</string>
  <string name="landing_statistics_title">Statistik</string>
  <string name="landing_income">Income</string>
  <string name="landing_outcome">Expand</string>
  <string name="landing_recent_transactions_title">Transaksi Terbaru</string>

  <string name="transaction_create">Buat Transaksi</string>
  <string name="transaction_update">Perbarui Transaksi</string>
  <string name="transaction_type">Tipe</string>
  <string name="transaction_description">Deskripsi</string>
  <string name="transaction_amount">Jumlah</string>
  <string name="transaction_date">Tanggal</string>

  <string name="transaction_income_create">Create Income Report</string>
  <string name="transaction_expense">Create Expense Report</string>
  <string name="report">Overview Report</string>

  <!--  Months-->
  <string name="january">Januari</string>
  <string name="february">Februari</string>
  <string name="march">Maret</string>
  <string name="april">April</string>
  <string name="may">Mei</string>
  <string name="june">Juni</string>
  <string name="july">Juli</string>
  <string name="august">Agustus</string>
  <string name="september">September</string>
  <string name="october">Oktober</string>
  <string name="november">November</string>
  <string name="december">Desember</string>

  <string name="not_available_value">N/a</string>

  <string name="action_save">Simpan</string>
  <string name="action_update">Perbarui</string>
  <string name="action_export_all">Export Semua</string>
  <string name="action_export_this_month">Export Bulan Ini</string>
  <string name="action_delete">Hapus</string>
  <string name="title_home">What do you need?</string>
  <string name="desc_title_home">Record your office finance down here</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="profile_typeOfBusiness">Industry</string>
  <string name="profile_emailAddress">office@bahanakarya.com</string>
  <string name="profile_numOfEmployee">50 Employees</string>
  <string name="profile_officeName">PT. Bahana Karya</string>
  <string name="profile_pictureDescription">profile picture</string>
</resources>