<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:custom="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorWhite"
      app:elevation="@dimen/no_space">

      <FrameLayout
        android:id="@+id/frameLayout_actionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
          android:id="@+id/textView_actionBarTitle"
          android:textColor="@color/colorBlack"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="Profile"/>

        <ImageView
          android:id="@+id/imageView_actionEdit"
          android:layout_width="@dimen/icon_36"
          android:layout_height="@dimen/icon_36"
          android:layout_gravity="center_vertical|end"
          android:layout_marginEnd="@dimen/medium_space"
          android:padding="@dimen/small_space"
          android:src="@drawable/ic_baseline_edit_24"
          app:tint="@color/colorBlack" />

      </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/default_space">


        <ImageView
          android:id="@+id/imageView_picProfile"
          android:layout_width="150dp"
          android:layout_height="150dp"
          android:layout_marginTop="@dimen/default_space"
          android:src="@drawable/profile_picture"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:contentDescription="@string/profile_pictureDescription" />

        <TextView
          android:id="@+id/textView_officeName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          app:layout_constraintTop_toBottomOf="@+id/imageView_picProfile"
          android:textSize="20sp"
          android:fontFamily="@font/cabin_bold"
          android:layout_marginTop="@dimen/default_space"
          android:text="@string/profile_officeName"/>

        <TextView
          android:id="@+id/textView_numOfEmployee"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          app:layout_constraintTop_toBottomOf="@+id/textView_officeName"
          android:textSize="18sp"
          android:fontFamily="@font/cabin_regular"
          android:text="@string/profile_numOfEmployee"/>

        <TextView
          android:id="@+id/textView_emailAddress"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/textView_numOfEmployee"
          app:layout_constraintStart_toStartOf="parent"
          android:textSize="20sp"
          android:fontFamily="@font/cabin_bold"
          android:layout_margin="@dimen/giant_space"
          android:drawablePadding="@dimen/default_space"
          android:text="@string/profile_emailAddress"
          app:drawableStartCompat="@drawable/ic_baseline_email_24" />

        <TextView
          android:id="@+id/textView_typeOfBusiness"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/textView_emailAddress"
          app:layout_constraintStart_toStartOf="parent"
          android:textSize="20sp"
          android:fontFamily="@font/cabin_bold"
          android:layout_marginStart="@dimen/giant_space"
          android:layout_marginTop="@dimen/default_space"
          android:drawablePadding="@dimen/default_space"
          android:text="@string/profile_typeOfBusiness"
          app:drawableStartCompat="@drawable/ic_baseline_business_center_24" />

        <TextView
          android:id="@+id/textView_officeAddress"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/textView_typeOfBusiness"
          app:layout_constraintStart_toStartOf="parent"
          android:textSize="20sp"
          android:fontFamily="@font/cabin_bold"
          android:layout_marginStart="@dimen/giant_space"
          android:layout_marginTop="@dimen/default_space"
          android:drawablePadding="@dimen/default_space"
          android:text="Jl. Ir. Juanda No. 52 Building 3"
          app:drawableStartCompat="@drawable/ic_baseline_business_24" />


      </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>