<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorBackground">

      <ImageView
        android:id="@+id/imageView_landingGreeting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/landing_greeting"
        android:scaleType="centerCrop"
        android:src="@drawable/img_sky_night"
        app:layout_constraintBottom_toTopOf="@id/view_landingGuideline"
        app:layout_constraintTop_toTopOf="parent" />

      <View
        android:id="@+id/view_landingGuideline"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="@id/cardView_landingBody" />

      <ImageView
        android:id="@+id/imageView_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_space"
        android:contentDescription="@string/landing_settings"
        android:src="@drawable/ic_baseline_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorWhite" />

      <TextView
        android:id="@+id/textView_landingBalanceTitle"
        style="@style/TextAppearance.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_space"
        android:text="@string/landing_balance_title"
        android:textColor="@color/colorTextDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_settings"
        tools:text="Available Balance" />

      <TextView
        android:id="@+id/textView_landingBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin_bold"
        android:text="@string/not_available_value"
        android:textColor="@color/colorTextDark"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_landingBalanceTitle"
        tools:text="Rp. 12.000.000" />

      <androidx.cardview.widget.CardView
        android:id="@+id/cardView_landingBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/large_space"
        android:layout_marginBottom="-32dp"
        app:cardBackgroundColor="@color/colorBackground"
        app:cardCornerRadius="32dp"
        app:cardElevation="@dimen/no_space"
        app:layout_constraintTop_toBottomOf="@id/textView_landingBalance">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingBottom="32dp">

          <TextView
            android:id="@+id/textView_quickActionTitle"
            style="@style/TextAppearance.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_default_start_margin"
            android:layout_marginTop="@dimen/default_space"
            android:text="@string/landing_action_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Quick Actions" />

          <LinearLayout
            android:id="@+id/linearLayout_quickAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/textView_quickActionTitle">

            <androidx.cardview.widget.CardView
              android:id="@+id/cardView_overviewReport"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/default_space"
              android:layout_marginTop="@dimen/medium_space"
              android:layout_marginEnd="@dimen/medium_space"
              android:layout_marginBottom="@dimen/medium_space"
              android:layout_weight="1"
              app:cardBackgroundColor="@color/colorWhite"
              app:cardCornerRadius="@dimen/default_space"
              app:cardElevation="@dimen/card_default_elevation"
              app:layout_constraintTop_toBottomOf="@id/textView_statisticsTitle">

              <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/medium_space">

                <ImageView
                  android:id="@+id/imageView_overviewReport"
                  android:layout_width="@dimen/icon_48"
                  android:layout_height="@dimen/icon_48"
                  android:layout_margin="@dimen/medium_space"
                  android:contentDescription="@string/landing_overview_report"
                  android:src="@drawable/icons8_financial_growth_analysis_48"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />

                <TextView
                  android:id="@+id/textView_overviewReport"
                  style="@style/TextAppearance.Body"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/medium_space"
                  android:text="@string/landing_overview_report"
                  app:layout_constraintEnd_toEndOf="@id/imageView_overviewReport"
                  app:layout_constraintStart_toStartOf="@id/imageView_overviewReport"
                  app:layout_constraintTop_toBottomOf="@id/imageView_overviewReport"
                  tools:text="Overview Report" />

              </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
              android:id="@+id/cardView_createReport"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/medium_space"
              android:layout_marginTop="@dimen/medium_space"
              android:layout_marginEnd="@dimen/default_space"
              android:layout_marginBottom="@dimen/medium_space"
              android:layout_weight="1"
              app:cardBackgroundColor="@color/colorWhite"
              app:cardCornerRadius="@dimen/default_space"
              app:cardElevation="@dimen/card_default_elevation"
              app:layout_constraintTop_toBottomOf="@id/textView_statisticsTitle">

              <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/medium_space">

                <ImageView
                  android:id="@+id/imageView_createReport"
                  android:layout_width="@dimen/icon_48"
                  android:layout_height="@dimen/icon_48"
                  android:layout_margin="@dimen/medium_space"
                  android:contentDescription="@string/landing_create_transaction"
                  android:src="@drawable/icons8_tips_48"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />

                <TextView
                  android:id="@+id/textView_createReport"
                  style="@style/TextAppearance.Body"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/medium_space"
                  android:text="@string/landing_create_transaction"
                  app:layout_constraintEnd_toEndOf="@id/imageView_createReport"
                  app:layout_constraintStart_toStartOf="@id/imageView_createReport"
                  app:layout_constraintTop_toBottomOf="@id/imageView_createReport"
                  tools:text="Create Report" />

              </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

          </LinearLayout>

          <TextView
            android:id="@+id/textView_statisticsTitle"
            style="@style/TextAppearance.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_default_start_margin"
            android:layout_marginTop="@dimen/medium_space"
            android:layout_marginEnd="@dimen/default_space"
            android:text="@string/landing_statistics_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_quickAction"
            tools:text="Statistics" />

          <androidx.cardview.widget.CardView
            android:id="@+id/cardView_income"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginTop="@dimen/medium_space"
            android:layout_marginEnd="@dimen/default_space"
            app:cardBackgroundColor="@color/colorEmerald"
            app:cardCornerRadius="@dimen/default_space"
            app:cardElevation="@dimen/no_space"
            app:layout_constraintTop_toBottomOf="@id/textView_statisticsTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/medium_space">

              <androidx.cardview.widget.CardView
                android:id="@+id/cardView_incomeIcon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="@dimen/default_space"
                app:cardElevation="@dimen/no_space"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                  android:id="@+id/imageView_income"
                  android:layout_width="@dimen/icon_48"
                  android:layout_height="@dimen/icon_48"
                  android:layout_gravity="center"
                  android:src="@drawable/icons8_deposit_48" />

              </androidx.cardview.widget.CardView>

              <TextView
                android:id="@+id/textView_incomeTitle"
                style="@style/TextAppearance.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_space"
                android:text="@string/landing_income"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toEndOf="@id/cardView_incomeIcon"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Income" />

              <TextView
                android:id="@+id/textView_income"
                style="@style/TextAppearance.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available_value"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@id/textView_incomeTitle"
                app:layout_constraintTop_toBottomOf="@id/textView_incomeTitle"
                tools:text="Rp. 200.000" />

              <TextView
                android:id="@+id/textView_incomeMonth"
                style="@style/TextAppearance.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@id/textView_incomeTitle"
                app:layout_constraintTop_toBottomOf="@id/textView_income"
                tools:text="May 2000" />

            </androidx.constraintlayout.widget.ConstraintLayout>

          </androidx.cardview.widget.CardView>

          <androidx.cardview.widget.CardView
            android:id="@+id/cardView_outcome"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="@dimen/default_space"
            app:cardBackgroundColor="@color/colorAlizarin"
            app:cardCornerRadius="@dimen/default_space"
            app:cardElevation="@dimen/no_space"
            app:layout_constraintTop_toBottomOf="@id/cardView_income">

            <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/medium_space">

              <androidx.cardview.widget.CardView
                android:id="@+id/cardView_outcomeIcon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="@dimen/default_space"
                app:cardElevation="@dimen/no_space"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                  android:id="@+id/imageView_outcome"
                  android:layout_width="@dimen/icon_48"
                  android:layout_height="@dimen/icon_48"
                  android:layout_gravity="center"
                  android:src="@drawable/icons8_withdrawal_48" />

              </androidx.cardview.widget.CardView>

              <TextView
                android:id="@+id/textView_outcomeTitle"
                style="@style/TextAppearance.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_space"
                android:text="@string/landing_outcome"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toEndOf="@id/cardView_outcomeIcon"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Outcome" />

              <TextView
                android:id="@+id/textView_outcome"
                style="@style/TextAppearance.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available_value"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@id/textView_outcomeTitle"
                app:layout_constraintTop_toBottomOf="@id/textView_outcomeTitle"
                tools:text="Rp. 120.000" />

              <TextView
                android:id="@+id/textView_outcomeMonth"
                style="@style/TextAppearance.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/landing_outcome"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@id/textView_outcomeTitle"
                app:layout_constraintTop_toBottomOf="@id/textView_outcome"
                tools:text="May 2020" />

            </androidx.constraintlayout.widget.ConstraintLayout>

          </androidx.cardview.widget.CardView>

          <TextView
            android:id="@+id/textView_recentTransactionTitle"
            style="@style/TextAppearance.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_default_start_margin"
            android:layout_marginTop="@dimen/default_space"
            android:text="@string/landing_recent_transactions_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView_outcome"
            tools:text="Recent Transactions" />

          <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_recentTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_space"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/textView_recentTransactionTitle"
            tools:listitem="@layout/item_transaction" />

        </androidx.constraintlayout.widget.ConstraintLayout>

      </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.core.widget.NestedScrollView>

</layout>