<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">


      <View
        android:id="@+id/view_landingGuideline"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="@id/cardView_landingBody" />

      <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_space"
        android:contentDescription="@string/landing_settings"
        android:src="@drawable/logo_transparantbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

      <ImageView
        android:id="@+id/imageView_picHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/landing_settings"
        android:src="@drawable/pict_transactionmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_logo"/>

      <TextView
        android:id="@+id/textView_titleHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin_bold"
        android:text="@string/title_home"
        android:textColor="@color/colorTextDark"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_picHome"
        tools:text="What do you need?" />

      <TextView
        android:id="@+id/textView_descTitleHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/desc_title_home"
        android:textColor="@color/colorTextDark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_titleHome"
        tools:text="Record your office finance down here" />




      <androidx.cardview.widget.CardView
        android:id="@+id/cardView_landingBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/large_space"
        android:layout_marginBottom="-32dp"
        app:cardCornerRadius="32dp"
        app:cardElevation="@dimen/no_space"
        app:layout_constraintTop_toBottomOf="@id/textView_titleHome">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingBottom="32dp">

          <LinearLayout
            android:id="@+id/linearLayout_quickAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
              android:id="@+id/cardView_overviewReport"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/default_space"
              android:layout_marginTop="@dimen/medium_space"
              android:layout_marginEnd="@dimen/medium_space"
              android:layout_marginBottom="@dimen/medium_space"
              android:layout_weight="1"
              app:cardBackgroundColor="#F0F4FF"
              app:cardCornerRadius="@dimen/default_space"
              app:cardElevation="@dimen/card_default_elevation"
              app:layout_constraintTop_toBottomOf="@id/textView_descTitleHome">

              <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/medium_space">

                <ImageView
                  android:id="@+id/imageView_overviewReport"
                  android:layout_width="@dimen/icon_48"
                  android:layout_height="@dimen/icon_48"
                  android:layout_margin="@dimen/medium_space"
                  android:contentDescription="@string/landing_income"
                  android:src="@drawable/ic_income"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />

                <TextView
                  android:id="@+id/textView_overviewReport"
                  style="@style/TextAppearance.MaterialComponents.Body1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/medium_space"
                  android:text="@string/landing_income"
                  app:layout_constraintEnd_toEndOf="@id/imageView_overviewReport"
                  app:layout_constraintStart_toStartOf="@id/imageView_overviewReport"
                  app:layout_constraintTop_toBottomOf="@id/imageView_overviewReport"
                  tools:text="Income" />

              </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
              android:id="@+id/cardView_createReport"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/medium_space"
              android:layout_marginTop="@dimen/medium_space"
              android:layout_marginEnd="@dimen/default_space"
              android:layout_marginBottom="@dimen/medium_space"
              android:layout_weight="1"
              app:cardBackgroundColor="#EEFCEF"
              app:cardCornerRadius="@dimen/default_space"
              app:cardElevation="@dimen/card_default_elevation"
              app:layout_constraintTop_toBottomOf="@id/textView_descTitleHome">

              <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/medium_space">

                <ImageView
                  android:id="@+id/imageView_createReport"
                  android:layout_width="@dimen/icon_48"
                  android:layout_height="@dimen/icon_48"
                  android:layout_margin="@dimen/medium_space"
                  android:contentDescription="@string/landing_outcome"
                  android:src="@drawable/ic_expense"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />

                <TextView
                  android:id="@+id/textView_createReport"
                  style="@style/TextAppearance.MaterialComponents.Body1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/medium_space"
                  android:text="@string/landing_outcome"
                  app:layout_constraintEnd_toEndOf="@id/imageView_createReport"
                  app:layout_constraintStart_toStartOf="@id/imageView_createReport"
                  app:layout_constraintTop_toBottomOf="@id/imageView_createReport"
                  tools:text="Expand" />

              </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

          </LinearLayout>


          <TextView
            android:id="@+id/textView_recentTransactionTitle"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_default_start_margin"
            android:layout_marginTop="@dimen/default_space"
            android:text="@string/landing_recent_transactions_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_quickAction"
            tools:text="Recent Transactions" />

          <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_recentTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_space"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/textView_recentTransactionTitle"
            tools:listitem="@layout/item_transaction" />

        </androidx.constraintlayout.widget.ConstraintLayout>

      </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.core.widget.NestedScrollView>

</layout>